[tool.poetry]
name = "amongus-discord-bot"
version = "0.1.0"
description = "A discord bot to control muting like AmongMuteUs, but manually"
authors = ["lukuon <hello@lukuon.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {extras = ["voice"], version = "^1.6.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
